--- a/modules/control-center-web/src/main/js/views/configuration/caches.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/caches.jade
@@ -55,7 +55,7 @@ block content
                             a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
                     .panel-collapse(bs-collapse-target)
                         .span(bs-collapse data-start-collapsed='true' data-allow-multiple='true')
-                            .panel.panel-default(ng-repeat='group in advanced')
+                            .panel.panel-default(ng-repeat='group in advanced' ng-hide='{{group.hide}}')
                                 .panel-heading
                                     h3
                                         a(bs-collapse-toggle) {{group.label}}
